Fix bottom spacing on primary hero story

--- a/content-src/components/DiscoveryStreamComponents/Hero/_Hero.scss
+++ b/content-src/components/DiscoveryStreamComponents/Hero/_Hero.scss
@@ -15,10 +15,14 @@
     .meta {
       padding: 0;
     }
+
+    .img-wrapper {
+      margin: 0 0 12px;
+    }
   }
 
   .img-wrapper {
-    margin: 0 0 12px;
+    margin: 0;
   }
 
   // "1/3 width layout" (aka "Mobile First")
